config be phieu muon